@@ -1,22 +1,27 @@
-package com.telegram.bot.bik.service.callback;
+package com.telegram.bot.bik.service.callback.impl;
 
 import com.telegram.bot.bik.api.parser.CurrentScheduleGroup;
-import com.telegram.bot.bik.enums.CallbackNameEnum;
+import com.telegram.bot.bik.config.properties.ButtonProperties;
 import com.telegram.bot.bik.model.entity.Student;
+import com.telegram.bot.bik.model.enums.CallbackNameEnum;
 import com.telegram.bot.bik.repository.StudentRepository;
+import com.telegram.bot.bik.service.callback.HandleCallback;
+import com.telegram.bot.bik.utils.MessageBuilder;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.telegram.telegrambots.meta.api.methods.BotApiMethod;
 import org.telegram.telegrambots.meta.api.methods.ParseMode;
-import org.telegram.telegrambots.meta.api.methods.updatingmessages.EditMessageText;
 import org.telegram.telegrambots.meta.api.objects.CallbackQuery;
+import org.telegram.telegrambots.meta.api.objects.Message;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.InlineKeyboardMarkup;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.buttons.InlineKeyboardButton;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
-import static com.telegram.bot.bik.enums.CallbackNameEnum.MENU_SELECT_GROUP;
+import static com.telegram.bot.bik.model.enums.CallbackNameEnum.MENU_SELECT_GROUP;
+import static com.telegram.bot.bik.utils.ButtonBuilder.buildInlineButton;
 
 @Service
 @RequiredArgsConstructor
@@ -24,11 +29,13 @@ public class CallbackMySchedule implements HandleCallback {
 
     private final StudentRepository studentRepository;
     private final CurrentScheduleGroup currentScheduleGroup;
+    private final ButtonProperties buttonProperties;
 
 
     @Override
-    public BotApiMethod<?> buildMessageByCallback(CallbackQuery callbackQuery) {
-        Long chatId = callbackQuery.getMessage().getChatId();
+    public BotApiMethod<?> handle(CallbackQuery callbackQuery) {
+        Message message = callbackQuery.getMessage();
+        Long chatId = message.getChatId();
 
         Student student = studentRepository.findStudentByTelegramId(chatId).orElseThrow();
         String course = student.getCourse();
@@ -36,22 +43,14 @@ public class CallbackMySchedule implements HandleCallback {
 
         String scheduleGroup = currentScheduleGroup.parseSchedule(course, name);
 
-        return EditMessageText.builder()
-                .messageId(callbackQuery.getMessage().getMessageId())
-                .text(scheduleGroup)
-                .chatId(callbackQuery.getMessage().getChatId())
-                .replyMarkup(buildKeyboard())
-                .parseMode(ParseMode.MARKDOWN)
-                .build();
+        return MessageBuilder.buildEditMessageText(scheduleGroup, message.getChatId(),
+                message.getMessageId(), buildKeyboard(), ParseMode.MARKDOWN);
     }
 
     private InlineKeyboardMarkup buildKeyboard() {
         List<List<InlineKeyboardButton>> buttons = new ArrayList<>();
-        buttons.add(List.of(
-                InlineKeyboardButton.builder()
-                        .text("⬅️ Назад")
-                        .callbackData(MENU_SELECT_GROUP.toString())
-                        .build()
+        buttons.add(Collections.singletonList(
+                buildInlineButton(MENU_SELECT_GROUP.toString(), buttonProperties.getBack())
         ));
 
         return InlineKeyboardMarkup.builder()
